cahnge in cart color

--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -95,7 +95,7 @@
     }
     .cart-logo {
       font-size: 24px;
-      color: #2600ff;
+      color: black;
     }
     .nav-links {
       display: flex;
