--- a/Eapp/templates/otto.html
+++ b/Eapp/templates/otto.html
@@ -22,7 +22,7 @@
    <style> /* General Styles */
 
     body {
-        font-family: 'Space Grotesk', sans-serif;
+        font-family: sans-serif; /* Changed to a simple sans-serif font */
         background-color: #fff;
         color: #333;
         margin: 0;
