--- a/Eapp/templates/home.html
+++ b/Eapp/templates/home.html
@@ -204,26 +204,35 @@
 <!-- Featured Products -->
 <section class="featured-products">
   <h2 style = "font-size: xx-large; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">&nbsp;&nbsp;&nbsp;Featured Guides</h2>
-    <div class="product-grid">
-        <div class="product-card">
-            <a href = "/otto"><img src="{% static 'images/product1.jpg' %}" alt="Ottobot"></a>
-            <h3>Ottobot</h3>
-        </div>
-        <div class="product-card">
-            <img src="{% static 'images/product2.jpg' %}" alt="Bionic Hand">
-            <h3>Bionic Hand</h3>
-            
-        </div>
-        <div class="product-card">
-            <img src="{% static 'images/product3.jpg' %}" alt="Product 3">
-            <h3>Solar detector</h3>
-            
-        </div>
-        <div class="product-card">
-            <img src="{% static 'images/product4.jpg' %}" alt="Product 4">
-            <h3>Asterbot</h3>
-            
-        </div>
+  <div class="product-grid">
+    <div class="product-card">
+        <a href="/otto">
+            <img src="{% static 'images/product1.jpg' %}" alt="Ott Robot">
+        </a>
+        <h3>Ottobot</h3>
     </div>
+
+    <div class="product-card">
+        <a href="/bionic_hand">
+            <img src="{% static 'images/product2.jpg' %}" alt="Bionic Hand">
+        </a>
+        <h3>Bionic Hand</h3>
+    </div>
+
+    <div class="product-card">
+        <a href="/solar_tracking">
+            <img src="{% static 'images/product3.jpg' %}" alt="Solar Tracking">
+        </a>
+        <h3>Solar Tracking</h3>
+    </div>
+
+    <div class="product-card">
+        <a href="/asterbot">
+            <img src="{% static 'images/product4.jpg' %}" alt="Asterbot">
+        </a>
+        <h3>Asterbot</h3>
+    </div>
+</div>
+
 </section>
 {% endblock %}
