new pages templates

--- a/Eapp/templates/home_automation.html
+++ b/Eapp/templates/home_automation.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bionic Hand Project</title>
+    <title>B\home_automation Project</title>
 </head>
 <body>
-    <h1>Bionic Hand Project</h1>
-    <p>This is the Bionic Hand project page.</p>
+    <h1>home_automation Project</h1>
+    <p>This is the home_automation project page.</p>
 </body>
 </html>
