--- a/Eapp/templates/solar_tracking.html
+++ b/Eapp/templates/solar_tracking.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bionic Hand Project</title>
+    <title>solar_tracking Project</title>
 </head>
 <body>
-    <h1>Bionic Hand Project</h1>
-    <p>This is the Bionic Hand project page.</p>
+    <h1>solar_tracking</h1>
+    <p>This is the solar_tracking project page.</p>
 </body>
 </html>
