--- a/Eapp/templates/humanoid_robot.html
+++ b/Eapp/templates/humanoid_robot.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bionic Hand Project</title>
+    <title>humanoid_robot Project</title>
 </head>
 <body>
-    <h1>Bionic Hand Project</h1>
-    <p>This is the Bionic Hand project page.</p>
+    <h1>humanoid_robot Project</h1>
+    <p>This is the humanoid_robot project page.</p>
 </body>
 </html>
