--- a/Eapp/templates/obstraction_avoiding_car.html
+++ b/Eapp/templates/obstraction_avoiding_car.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bionic Hand Project</title>
+    <title>obstraction_avoiding_car Project</title>
 </head>
 <body>
-    <h1>Bionic Hand Project</h1>
-    <p>This is the Bionic Hand project page.</p>
+    <h1>obstraction_avoiding_car Project</h1>
+    <p>This is the obstraction_avoiding_car project page.</p>
 </body>
 </html>
