--- a/Eapp/templates/home.html
+++ b/Eapp/templates/home.html
@@ -9,13 +9,13 @@
     <div class="sidebar">
         <h2>Projects</h2>
         <ul>
-          <li><a href="#">Bionic Hand</a></li>
-          <li><a href="#">Aster Robot</a></li>
-          <li><a href="#">Otto Robot</a></li>
+          <li><a href="/bionic_hand">Bionic Hand</a></li>
+          <li><a href="/asterbot">Aster Robot</a></li>
+          <li><a href="/otto">Otto Robot</a></li>
+          <li><a href="/home-automation">Home Automation</a></li>
           <li><a href="#">Dog Head</a></li>
-          <li><a href="#">Home Automation</a></li>
           <li><a href="#">Humonoid Robot</a></li>
-          <li><a href="#">Obstacle Avoidance Car</a></li>
+          <li><a href="/obstraction-avoiding-car">Obstacle Avoidance Car</a></li>
           <li><a href="#">Real Time Clock</a></li>
         </ul>
       </div>
